# ssnl

./: .gitignore  .pre-commit-config.yaml  01-main.py  02-evaluate_posteriors.py  LICENSE  README.md  Snakefile  compute_mmd.py  environment.yaml  main.py  pyproject.toml  snake_config.yaml
configs/: mcmc.py  snass.py  snasss.py  snl.py  snpe.py  snre.py  ssnl.py
data/: dataset.py  slcp.py  slcp_torch.py  solar_dynamo.py  solar_dynamo_observation.pkl  solar_dynamo_torch.py
data_and_models/: __init__.py  beta_glm.py  beta_glm_design_matrix.pkl  beta_glm_torch.py  gaussian_mixture.py  gaussian_mixture_torch.py  hyperboloid.py  hyperboloid_torch.py  jansen_rit.py  jansen_rit_torch.py  lotka_volterra.py  lotka_volterra_torch.py  lotka_volterra_very_long.py  lotka_volterra_very_long_torch.py  ornstein_uhlenbeck.py  (+9 more)
surjectors/: pyproject.toml
surjectors/surjectors/: __init__.py  util.py
surjectors/surjectors/bijectors/: _bijector.py  lu_linear.py  masked_autoregressive.py  masked_autoregressive_test.py  masked_coupling.py  masked_coupling_test.py  permutation.py
surjectors/surjectors/conditioners/: __init__.py  mlp.py  transformer.py
surjectors/surjectors/conditioners/nn/: made.py  made_test.py  masked_linear.py
surjectors/surjectors/distributions/: transformed_distribution.py
surjectors/surjectors/surjectors/: _transform.py  affine_masked_autoregressive_inference_funnel.py  affine_masked_autoregressive_inference_funnel_test.py  affine_masked_coupling_generative_funnel.py  affine_masked_coupling_inference_funnel.py  augment.py  chain.py  funnel.py  masked_coupling_inference_funnel.py  mlp.py  rq_masked_autoregressive_inference_funnel.py  rq_masked_coupling_inference_funnel.py  rq_masked_coupling_inference_funnel_test.py  slice.py  surjector.py  surjectors_test.py
(+39 files in other folders)
